Fixed margins for set selection on mobile, Closing #13

--- a/src/AppBundle/Resources/public/css/style.scss
+++ b/src/AppBundle/Resources/public/css/style.scss
@@ -1259,6 +1259,11 @@ footer a {
     margin-right: -90px;
     font-size: 85%;
   }
+
+  #config-options {
+    margin-right: -55px;
+    font-size: 85%;
+  }
 }
 
 [data-unique="true"] {
